# backend_control/models.py
@@ -1,21 +1,29 @@
-from pydantic import BaseModel
+from pydantic import BaseModel, Field
+
+
+class JWTHeader(BaseModel):
+    jwt_token: str = Field(..., alias="Authorization")
+
 
 class ChatRequestWithSession(BaseModel):
     sessionID: str
-    gmail: str
     question: str
+
 
 class ChatResponse(BaseModel):
     response: str
     responseID: str
 
+
 class FeedbackRequest(BaseModel):
     responseID: str
-    liked: bool
+    is_liked: bool
+
 
 class ErrorResponse(BaseModel):
     error: str
     code: int
+
 
 class IncompleteResponse(BaseModel):
     message: str
